--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flix</title>
+    <title>BestFlix</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,17 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <h1>DopeFlix</h1>
+    </header>
+    <div class="content">
+      <%= yield %>
+    </div>
+      <footer>
+    <p>
+      Copyright &copy; <%= Time.now.year %>
+      <%= link_to "Tyler Rhodes", "https://tyler-rhodes-portfolio.herokuapp.com/" %>
+    </p>
+  </footer>
   </body>
 </html>
