--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,9 +2,9 @@
   <% @movies.each do |movie| %>
     <li>
       <strong> <%= movie.title %> </strong> (<%= movie.rating %>): 
-      <%=number_to_currency(movie.total_gross, precision: 0) %>
-      <p><%= movie.description %></p>
-      <p><%= movie.released_on %></p>
+      <%=total_gross(movie) %>
+      <p><%= truncate(movie.description, length: 40, separator: ' ') %></p>
+      <p><%= year_of(movie) %></p>
      </li>
   <% end %>
 </ul>
