--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,16 @@
 
   <body>
     <header>
-      <h1>DopeFlix</h1>
+      <%= image_tag("logo") %>
     </header>
     <div class="content">
       <%= yield %>
     </div>
-      <footer>
-    <p>
-      Copyright &copy; <%= Time.now.year %>
-      <%= link_to "Tyler Rhodes", "https://tyler-rhodes-portfolio.herokuapp.com/" %>
-    </p>
-  </footer>
+    <footer>
+      <p>
+        Copyright &copy; <%= Time.now.year %>
+        <%= link_to "Tyler Rhodes", "https://tyler-rhodes-portfolio.herokuapp.com/" %>
+      </p>
+    </footer>
   </body>
 </html>
