--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <%= image_tag("logo") %>
+      <%= link_to image_tag("logo"), movies_path %>
     </header>
     <div class="content">
       <%= yield %>
