--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,14 @@
 
   <body>
     <header>
-      <%= link_to image_tag("logo"), movies_path %>
+      <nav>
+        <%= link_to image_tag("logo"), root_path %>
+        <ul>
+          <li>
+            <%= link_to 'All Movies', movies_path %>
+          </li>
+        </ul>
+      </nav>
     </header>
     <div class="content">
       <%= yield %>
