--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,24 +11,12 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <%= link_to image_tag("logo"), root_path %>
-        <ul>
-          <li>
-            <%= link_to 'All Movies', movies_path %>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <%= render "layouts/header" %>
+
     <div class="content">
       <%= yield %>
     </div>
-    <footer>
-      <p>
-        Copyright &copy; <%= Time.now.year %>
-        <%= link_to "Tyler Rhodes", "https://tyler-rhodes-portfolio.herokuapp.com/" %>
-      </p>
-    </footer>
+
+    <%= render "layouts/footer" %>
   </body>
 </html>
