--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -12,7 +12,17 @@
   <%= f.label :released_on %>
   <%= f.date_field :released_on %>
 
+  <%= f.label :director %>
+  <%= f.text_field :director %>
+
   <%= f.label :total_gross %>
-  <%= f.number_field :total_gross %>
+  <%= f.text_field :total_gross %>
+
+  <%= f.label :duration %>
+  <%= f.text_field :duration %>
+
+  <%= f.label :image_file_name %>
+  <%= f.text_field :image_file_name %>
+  
   <%= f.submit %>
 <% end %>
