--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,10 @@
 <header>
   <nav>
-    <%= link_to image_tag("logo"), root_path %>
+    <%
+=begin%>
+ <%= link_to image_tag("logo"), root_path %> 
+<%
+=end%>
     <ul>
       <li>
         <%= link_to 'All Movies', movies_path %>
