Display the average review for a movie

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -11,6 +11,9 @@
       <h3>
         <%= total_gross(movie) %>
       </h3>
+      <span class="stars">
+        <%= render "shared/stars", percent: movie.average_stars_as_percent %>
+      </span>
       <p>
         <%= truncate(movie.description, length: 150, separator: ' ') %>
       </p>
