--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,9 +5,15 @@
  <%= link_to image_tag("logo"), root_path %> 
 <%
 =end%>
-    <ul>
+    <ul class="left">
       <li>
         <%= link_to 'All Movies', movies_path %>
+      </li>
+    </ul>
+
+    <ul class="right">
+       <li>
+        <%= link_to 'Sign Up', signup_path, class: "button" %>
       </li>
     </ul>
   </nav>
