--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,10 @@
-<ul>
-  <% @users.collect.each do |u|%>
-    <li><%= u.name %></li>
-    <span><%= u.password_digest %></span>
-  <% end%>
+<h1><%= pluralize(@users.size, "User") %></h1>
+<ul class="users">
+  <% @users.each do |user| %>
+    <li>
+      <%= link_to user.name, user %>
+      created
+      <%= time_ago_in_words(user.created_at) %> ago
+    </li>
+  <% end %>
 </ul>
