--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,10 @@
   <%= profile_image(@user) %>
   <h1><%= @user.name %></h1>
   <h2><%= mail_to(@user.email) %></h2>
-</section>
 
- <h3>Member Since</h3>
-    <p>
-      <%= @user.created_at.strftime("%B %Y") %>
-    </p>
+  <div class="actions">
+    <%= link_to "Edit Account", edit_user_path(@user), class: "button edit" %>
+    <%= link_to "Delete Account", user_path(@user), method: :delete,
+    data: { confirm: "Are you sure you want to delete your account?" }, class: "button delete" %>
+  </div>
+</section>
