--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,6 +4,9 @@
   <%= f.label :name %>
   <%= f.text_field :name, autofocus: true %>
 
+  <%= f.label :username %>
+  <%= f.text_field :username, autofocus: true %>
+
   <%= f.label :email %>
   <%= f.email_field :email %>
 
