--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <section class="user">
   <%= profile_image(@user) %>
   <h1><%= @user.name %></h1>
+  <h2><%= @user.username %></h2>
   <h2><%= mail_to(@user.email) %></h2>
 
   <div class="actions">
