--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,6 @@
 <header>
   <nav>
-    <%
-=begin%>
- <%= link_to image_tag("logo"), root_path %> 
-<%
-=end%>
+
     <ul class="left">
       <li>
         <%= link_to 'All Movies', movies_path %>
@@ -12,9 +8,21 @@
     </ul>
 
     <ul class="right">
-       <li>
-        <%= link_to 'Sign Up', signup_path, class: "button" %>
-      </li>
+      <% if current_user %>
+        <li>
+          <%= link_to current_user.name, user_path(session[:user_id]) %>
+        </li>
+        <li>
+          <%= link_to "Sign Out", session_path, method: :delete, class: "button" %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to 'Sign Up', signup_path, class: "button" %>
+        </li>
+        <li>
+          <%= link_to 'Sign In', signin_path, class: "button" %>
+        </li>
+      <% end %>
     </ul>
   </nav>
 </header>
