--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -25,7 +25,9 @@
   </div>
 </section>
 
-<section class="admin">
-  <%= link_to "Edit", edit_movie_path(@movie), class: "button" %>
-  <%= link_to "Delete", movie_path(@movie), class: "button", method: :delete, data: { confirm: "Do you really want to delete this movie?" } %>
-</section>
+<% if current_user_admin? %>
+  <section class="admin">
+    <%= link_to "Edit", edit_movie_path(@movie), class: "button" %>
+    <%= link_to "Delete", movie_path(@movie), class: "button", method: :delete, data: { confirm: "Do you really want to delete this movie?" } %>
+  </section>
+<% end %>
