--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,9 +4,11 @@
   <h2><%= @user.username %></h2>
   <h2><%= mail_to(@user.email) %></h2>
 
-  <div class="actions">
-    <%= link_to "Edit Account", edit_user_path(@user), class: "button edit" %>
-    <%= link_to "Delete Account", user_path(@user), method: :delete,
-    data: { confirm: "Are you sure you want to delete your account?" }, class: "button delete" %>
-  </div>
+  <% if current_user?(@user) || current_user_admin? %>
+    <div class="actions">
+      <%= link_to "Edit Account", edit_user_path(@user), class: "button edit" %>
+      <%= link_to "Delete Account", user_path(@user), method: :delete,
+      data: { confirm: "Are you sure you want to delete your account?" }, class: "button delete" %>
+    </div>
+  <% end %>
 </section>
