--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,6 +1,14 @@
 <section class="movie-details">
 <div class="image">
   <%= image_tag(@movie.image_file_name) %>
+  <% if current_user %>
+    <div class="faves">
+      <%= fave_or_unfave_button(@movie, @favorite) %>
+      <div class="count">
+        <%= @fans.size %>
+      </div>
+    </div>
+  <% end %>
 </div>
   <div class="details">
     <h1><%= @movie.title %></h1>
@@ -10,7 +18,7 @@
     <div class="reviews">
       <%= render "shared/stars", percent: @movie.average_stars_as_percent %>
       <%= link_to pluralize(@movie.reviews.size, "review"), movie_reviews_path(@movie) %>
-       
+
     </div>
     <p>
       <%= @movie.description %>
@@ -23,6 +31,18 @@
       </tr>
     </table>
   </div>
+  <aside>
+<% if @fans.present? %>
+    <h4>Fans</h4>
+    <ul>
+      <% @fans.each do |user| %>
+        <li>
+          <%= link_to user.name, user %>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
+</aside>
 </section>
 
 <% if current_user_admin? %>
