--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,6 +24,17 @@
     <% end %>
   <% end %>
 
+  <% if @favorite_movies.present? %>
+    <h3>Favorite Movies</h3>
+    <div class="favorite-movies">
+      <% @favorite_movies.each do |movie| %>
+        <%= link_to image_tag(movie.image_file_name), movie %>
+      <% end %>
+    </div>
+<% end %>
+
+  
+
   <% if current_user?(@user) || current_user_admin? %>
     <div class="actions">
       <%= link_to "Edit Account", edit_user_path(@user), class: "button edit" %>
