--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -32,15 +32,23 @@
     </table>
   </div>
   <aside>
-<% if @fans.present? %>
-    <h4>Fans</h4>
-    <ul>
+    <% if @fans.present? %>
+      <h4>Fans</h4>
+      <ul>
       <% @fans.each do |user| %>
         <li>
           <%= link_to user.name, user %>
         </li>
       <% end %>
-    </ul>
+      </ul>
+      <% end %>
+  <% if @genres.present? %>
+  <h4>Genres</h4>
+  <ul>
+    <% @genres.each do |g| %>
+      <li><%= g.name %></li>
+    <% end %>
+  </ul>
   <% end %>
 </aside>
 </section>
