--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
     <ul class="right">
       <% if current_user %>
         <li>
-          <%= link_to current_user.name, user_path(session[:user_id]) %>
+          <%= link_to current_user.name, user_path(current_user) %>
         </li>
         <li>
           <%= link_to "Sign Out", session_path, method: :delete, class: "button" %>
